--- a/app/src/css/main.css
+++ b/app/src/css/main.css
@@ -28,11 +28,13 @@ body {
   height: 38px;
   border-radius: 20px;
   float: right;
-  margin: 37px 30px 0 0; }
+  margin: 22px 30px 0 0; }
 
 .phone {
   display: flex;
   padding: 27px 0 0 25px; }
+  .phone__text {
+    padding: 0 0 0 6px; }
   .phone__images {
     width: 44px;
     margin: -5px 0 0 -1px; }
@@ -40,7 +42,6 @@ body {
       max-width: 100%;
       width: 100%; }
   .phone__number {
-    padding: 0 0 0 7px;
     font-weight: 600;
     letter-spacing: -0.6px; }
 
@@ -81,7 +82,7 @@ body {
 .free_calls {
   font-size: 11.3px;
   letter-spacing: -0.3px;
-  padding: 2px 0 0 10px;
+  padding: 2px 0 0 0;
   float: left; }
 
 .dropbtn {
@@ -204,10 +205,17 @@ nav {
     color: #abcb3e;
     font-weight: 600;
     letter-spacing: -2.2px; }
+    .features__top--hosting {
+      color: #fff;
+      margin: -32px 0 0 58px;
+      display: flex; }
   .features__bottom {
     font-size: 15px;
     color: #fff;
     font-weight: 600; }
+    .features__bottom--hosting-bottom {
+      display: flex;
+      padding: 0 0 0 56px; }
 
 .order__start {
   font-size: 50px;
@@ -265,8 +273,6 @@ nav {
   display: inline-block;
   font-size: 26px;
   border-radius: 30px;
-  width: 313px;
-  height: 63px;
   position: relative;
   margin: 6px 0 0 38px;
   border: none; }
@@ -279,10 +285,6 @@ nav {
     display: inline-block;
     font-size: 26px;
     border-radius: 30px;
-    width: 313px;
-    height: 52px;
-    margin: 6px 0 0 38px;
-    height: 52px;
     background: none;
     border: 2px solid white;
     margin: 17px 0 0 38px;
@@ -491,7 +493,7 @@ nav {
     text-align: center;
     padding: 10px 0 17px 0; }
     .offer__price--ruble {
-      padding: 0;
+      padding: 0 0 0 46px;
       margin: 0;
       display: inline-block;
       font-size: 20px; }
@@ -611,33 +613,33 @@ nav {
   background: url(/src/img/fon23.png) no-repeat center center;
   max-width: 100%;
   width: 100%;
-  margin: 36px 0 0; }
+  margin: 29px 0 0; }
   .advantage h4 {
     color: #fff;
     font-size: 35px;
     text-align: center;
     letter-spacing: -1px; }
   .advantage__block-one {
-    padding: 25px 0 0 0; }
+    padding: 50px 0 0 0; }
   .advantage__block-two {
-    padding: 60px 0 0 0; }
+    padding: 78px 0 0 0; }
   .advantage__block-three {
-    padding: 90px 0 0 0; }
+    padding: 75px 0 0 0; }
   .advantage__block-four {
-    padding: 87px 0 89px 0; }
+    padding: 94px 0 34px; }
   .advantage__img-container {
     display: flex;
-    justify-content: center;
-    padding: 22px 0 0 0; }
+    justify-content: center; }
   .advantage__span-name {
     text-align: center;
-    padding: 20px 0 0 0; }
+    padding: 35px 0 0; }
   .advantage__name {
     font-size: 20px;
     color: #fff;
-    text-align: center;
-    display: inline-block;
-    font-weight: 600; }
+    font-weight: 600;
+    letter-spacing: -1.4px;
+    justify-content: center;
+    display: flex; }
     .advantage__name--bottom {
       font-size: 13px;
       color: #ffffff;
@@ -656,14 +658,88 @@ nav {
     text-align: center; }
 
 .new-level {
-  background-color: #4960c7;
+  background-color: #5e5e5e;
   width: 100%;
   max-width: 100%;
-  height: 300px; }
+  padding: 65px 0 97px 0; }
   .new-level h4 {
     font-size: 38px;
     letter-spacing: -1px;
-    text-align: center; }
+    text-align: center;
+    color: #fff; }
+  .new-level__is-free {
+    font-size: 18px;
+    letter-spacing: -1.1px;
+    margin: 0 0 0 -4px; }
+  .new-level__99 {
+    font-size: 25px;
+    font-weight: 600;
+    margin: 0 -10px 0 0; }
+  .new-level__r {
+    font-size: 10px; }
+  .new-level__button-left {
+    background-color: #ffe300;
+    border-radius: 30px;
+    padding: 13px 35px 21px 43px;
+    color: #000;
+    text-decoration: none;
+    font-size: 18px;
+    text-align: center;
+    margin: 26px 0 0 23px;
+    display: inline-block;
+    letter-spacing: -0.1px; }
+  .new-level__button-centr {
+    color: #fff;
+    padding: 24px 28px 16px 34px;
+    font-size: 18px;
+    border-radius: 30px;
+    background: none;
+    border: 2px solid #fff;
+    margin: 24px 0 0 -40px;
+    text-decoration: none;
+    text-align: center;
+    display: inline-block;
+    position: relative; }
+  .new-level__button-right {
+    color: black;
+    padding: 18px 55px 21px 31px;
+    margin: 25px 0 0 -27px;
+    font-size: 16px;
+    border-radius: 30px;
+    background: #fff;
+    border: 2px solid #fff;
+    text-decoration: none;
+    text-align: center;
+    display: inline-block;
+    position: absolute; }
+
+.warranty {
+  max-width: 100%;
+  width: 100%;
+  background-color: #bbbbbb;
+  height: 500px;
+  position: relative; }
+  .warranty__heading {
+    color: #fff;
+    font-size: 34px;
+    text-align: center;
+    padding: 41px 0 19px 0;
+    display: block;
+    letter-spacing: -3.4px; }
+  .warranty__support {
+    color: #000;
+    margin: 17px 0 0 -22px;
+    font-size: 16px;
+    border-radius: 50px;
+    background: #fff;
+    border: 2px solid #fff;
+    text-decoration: none;
+    text-align: center;
+    display: inline-block; }
+  .warranty__sharlosk-man {
+    position: absolute;
+    top: 102px;
+    left: 45px; }
 
 /*Responsive start*/
 /*UltraLarge screens start*/
