--- a/app/src/scss/common.scss
+++ b/app/src/scss/common.scss
@@ -11,14 +11,17 @@ body {
     height: 38px;
     border-radius: 20px;
     float: right;
-    margin: 37px 30px 0 0;
+    margin: 22px 30px 0 0;
   }
-
 }
 
 .phone {
   display: flex;
   padding: 27px 0 0 25px;
+
+  &__text {
+    padding: 0 0 0 6px;
+  }
 
   &__images {
     width: 44px;
@@ -31,14 +34,12 @@ body {
   }
 
   &__number {
-    padding: 0 0 0 7px;
     font-weight: 600;
     letter-spacing: -0.6px;
   }
 }
 
 .links {
-
   padding: 31px 0 0 0;
 
   &__chat {
@@ -65,7 +66,6 @@ body {
     text-decoration: underline;
     display: inline-block;
     padding: 0 0 0 35px;
-
   }
 
   &__support {
@@ -73,7 +73,6 @@ body {
     letter-spacing: 0.8px;
     text-decoration: underline;
     display: inline-block;
-
   }
 
   &__entrance {
@@ -90,7 +89,7 @@ body {
 .free_calls {
   font-size: 11.3px;
   letter-spacing: -0.3px;
-  padding: 2px 0 0 10px;
+  padding: 2px 0 0 0;
   float: left;
 }
 
@@ -244,12 +243,23 @@ nav {
     color: #abcb3e;
     font-weight: 600;
     letter-spacing: -2.2px;
+
+    &--hosting {
+      color: #fff;
+      margin: -32px 0 0 58px;
+      display: flex;
+    }
   }
 
   &__bottom {
     font-size: 15px;
     color: #fff;
     font-weight: 600;
+
+    &--hosting-bottom {
+      display: flex;
+      padding: 0 0 0 56px;
+    }
   }
 }
 
@@ -323,8 +333,7 @@ nav {
     display: inline-block;
     font-size: 26px;
     border-radius: 30px;
-    width: 313px;
-    height: 63px;
+
     position: relative;
     margin: 6px 0 0 38px;
     border: none;
@@ -338,12 +347,8 @@ nav {
       display: inline-block;
       font-size: 26px;
       border-radius: 30px;
-      width: 313px;
-      height: 52px;
-      margin: 6px 0 0 38px;
-      height: 52px;
-background: none;
-border: 2px solid white;
+      background: none;
+      border: 2px solid white;
       margin: 17px 0 0 38px;
       display: inline-block;
     }
@@ -634,7 +639,7 @@ border: 2px solid white;
     padding: 10px 0 17px 0;
 
     &--ruble {
-      padding: 0;
+      padding: 0 0 0 46px;
       margin: 0;
       display: inline-block;
       font-size: 20px;
@@ -807,7 +812,7 @@ border: 2px solid white;
   background: url(/src/img/fon23.png) no-repeat center center;
   max-width: 100%;
   width: 100%;
-  margin: 36px 0 0;
+  margin: 29px 0 0;
 
   h4 {
     color: #fff;
@@ -817,38 +822,38 @@ border: 2px solid white;
   }
 
   &__block-one {
-    padding: 25px 0 0 0;
+    padding: 50px 0 0 0;
   }
 
   &__block-two {
-    padding: 60px 0 0 0;
+    padding: 78px 0 0 0;
   }
 
   &__block-three {
-    padding: 90px 0 0 0;
+    padding: 75px 0 0 0;
   }
 
   &__block-four {
-    padding: 87px 0 89px 0;
+    padding: 94px 0 34px;
   }
 
   &__img-container {
     display: flex;
     justify-content: center;
-    padding: 22px 0 0 0;
   }
 
   &__span-name {
     text-align: center;
-    padding: 20px 0 0 0;
+    padding: 35px 0 0;
   }
 
   &__name {
     font-size: 20px;
     color: #fff;
-    text-align: center;
-    display: inline-block;
     font-weight: 600;
+    letter-spacing: -1.4px;
+    justify-content: center;
+    display: flex;
 
     &--bottom {
       font-size: 13px;
@@ -873,14 +878,113 @@ border: 2px solid white;
 }
 
 .new-level {
-  background-color: rgb(73, 96, 199);
+  background-color: rgb(94, 94, 94);
   width: 100%;
   max-width: 100%;
-  height: 300px;
+  padding: 65px 0 97px 0;
 
   h4 {
     font-size: 38px;
     letter-spacing: -1px;
     text-align: center;
+    color: #fff;
   }
+
+  &__is-free {
+    font-size: 18px;
+    letter-spacing: -1.1px;
+    margin: 0 0 0 -4px;
+  }
+
+  &__99 {
+    font-size: 25px;
+    font-weight: 600;
+    margin: 0 -10px 0 0;
+  }
+
+  &__r {
+    font-size: 10px;
+  }
+
+  &__button-left {
+    background-color: #ffe300;
+    border-radius: 30px;
+    padding: 13px 35px 21px 43px;
+    color: #000;
+    text-decoration: none;
+    font-size: 18px;
+    text-align: center;
+    margin: 26px 0 0 23px;
+    display: inline-block;
+    letter-spacing: -0.1px;
+  }
+
+  &__button-centr {
+    color: #fff;
+    padding: 24px 28px 16px 34px;
+    font-size: 18px;
+    border-radius: 30px;
+    background: none;
+    border: 2px solid #fff;
+    margin: 24px 0 0 -40px;
+    text-decoration: none;
+    text-align: center;
+    display: inline-block;
+    position: relative;
+  }
+
+  &__button-right {
+    color: rgb(0, 0, 0);
+    padding: 18px 55px 21px 31px;
+    margin: 25px 0 0 -27px;
+    font-size: 16px;
+    border-radius: 30px;
+    background: #fff;
+    border: 2px solid #fff;
+    text-decoration: none;
+    text-align: center;
+    display: inline-block;
+    position: absolute;
+  }
+}
+
+.warranty {
+  max-width: 100%;
+  width: 100%;
+  background-color: rgb(187, 187, 187);
+  height: 500px;
+  position: relative;
+
+  &__heading {
+    color: #fff;
+    font-size: 34px;
+    text-align: center;
+    padding: 41px 0 19px 0;
+    display: block;
+    letter-spacing: -3.4px;
+  }
+
+  &__support {
+    color: #000;
+    margin: 17px 0 0 -22px;
+    font-size: 16px;
+    border-radius: 50px;
+    background: #fff;
+    border: 2px solid #fff;
+    text-decoration: none;
+    text-align: center;
+    display: inline-block;
+  }
+
+  &__sharlosk-man {
+    position: absolute;
+top: 102px;
+left: 45px;
+
+  }
+
+
+
+
+
 }
