--- a/app/src/css/main.css
+++ b/app/src/css/main.css
@@ -205,6 +205,8 @@ nav {
     color: #abcb3e;
     font-weight: 600;
     letter-spacing: -2.2px; }
+    .features__top--color-white {
+      color: #fff; }
     .features__top--hosting {
       color: #fff;
       margin: -32px 0 0 58px;
@@ -688,6 +690,12 @@ nav {
     margin: 26px 0 0 23px;
     display: inline-block;
     letter-spacing: -0.1px; }
+  .new-level__ili {
+    display: block;
+    color: #fff;
+    font-size: 15px;
+    padding: 50px 0 0 0;
+    margin: 0 0 0 -26px; }
   .new-level__button-centr {
     color: #fff;
     padding: 24px 28px 16px 34px;
@@ -716,8 +724,8 @@ nav {
 .warranty {
   max-width: 100%;
   width: 100%;
-  background-color: #bbbbbb;
-  height: 500px;
+  background-color: #caffac;
+  padding: 0 0 94px 0;
   position: relative; }
   .warranty__heading {
     color: #fff;
@@ -728,18 +736,131 @@ nav {
     letter-spacing: -3.4px; }
   .warranty__support {
     color: #000;
-    margin: 17px 0 0 -22px;
+    margin: 17px 0 0 0;
     font-size: 16px;
     border-radius: 50px;
     background: #fff;
     border: 2px solid #fff;
     text-decoration: none;
     text-align: center;
-    display: inline-block; }
+    display: inline-block;
+    padding: 17px 0 0 0; }
   .warranty__sharlosk-man {
     position: absolute;
     top: 102px;
     left: 45px; }
+  .warranty__information {
+    font-size: 19px;
+    font-weight: 600;
+    letter-spacing: -1.8px; }
+
+.partners {
+  background-color: #555555;
+  position: relative;
+  padding: 0 0 49px 0; }
+  .partners__our {
+    color: #fff;
+    font-size: 42px;
+    text-align: center;
+    padding: 6px 8px 0 0;
+    display: block;
+    letter-spacing: -5.1px; }
+  .partners__bottom {
+    padding: 50px 0 0 0; }
+
+.payment {
+  padding: 0 0 27px 0; }
+  .payment__accept {
+    font-size: 40px;
+    padding: 10px 0 0;
+    text-align: center;
+    display: block;
+    letter-spacing: -3.7px; }
+  .payment__wallets {
+    padding: 10px 0 0 0; }
+  .payment__show-all {
+    display: block;
+    text-align: center;
+    font-size: 20px;
+    padding: 40px 0 0 0;
+    text-decoration: underline; }
+
+.recommendation {
+  padding: 0 0 70px 0; }
+  .recommendation__heading {
+    text-align: center;
+    display: block;
+    font-size: 40px;
+    padding: 24px 0 0 0;
+    letter-spacing: -3px;
+    margin: 0; }
+  .recommendation__images {
+    border-radius: 50%;
+    padding: 17px 0 0 26px; }
+  .recommendation__photo {
+    padding: 20px 0 0 0; }
+  .recommendation__h5 {
+    text-align: center;
+    font-size: 17px;
+    margin: 0;
+    padding: 53px 10px 0 0;
+    letter-spacing: -2.2px; }
+  .recommendation__h6 {
+    text-align: center;
+    font-size: 13px;
+    font-style: italic;
+    font-weight: normal;
+    letter-spacing: -0.5px;
+    margin: 0;
+    padding: 15px 7px 0 0; }
+  .recommendation__p {
+    font-size: 13px;
+    line-height: 23.5px;
+    text-align: justify; }
+
+.building {
+  background-color: #000;
+  width: 100%;
+  max-width: 100%; }
+  .building__computer {
+    margin: -13px 0 0 -68px; }
+  .building__tool {
+    margin: 0 0 55px -14px; }
+  .building__name {
+    font-size: 30px;
+    letter-spacing: -2.3px;
+    margin: 0 0 0 -53px;
+    padding: 58px 0 0 0;
+    color: #fff; }
+  .building__price {
+    margin: -24px 0 0 0; }
+  .building__ot {
+    font-size: 20px;
+    color: #fff; }
+  .building__r {
+    font-size: 33px;
+    color: #fff; }
+  .building__99 {
+    font-size: 65px;
+    color: #fff;
+    font-weight: 600;
+    letter-spacing: -5px; }
+  .building__mes {
+    font-size: 25px;
+    color: #fff;
+    margin: 0 0 0 -20px; }
+  .building__link-button {
+    background-color: #ffe300;
+    border-radius: 30px;
+    padding: 13px 35px 21px 43px;
+    color: #000;
+    text-decoration: none;
+    font-size: 18px;
+    text-align: center;
+    display: inline-block;
+    letter-spacing: -0.1px; }
+  .building .grid-container.fluid {
+    max-width: 100%; }
 
 /*Responsive start*/
 /*UltraLarge screens start*/
