--- a/app/src/scss/common.scss
+++ b/app/src/scss/common.scss
@@ -244,6 +244,10 @@ nav {
     font-weight: 600;
     letter-spacing: -2.2px;
 
+    &--color-white {
+      color: #fff;
+    }
+
     &--hosting {
       color: #fff;
       margin: -32px 0 0 58px;
@@ -919,6 +923,14 @@ nav {
     letter-spacing: -0.1px;
   }
 
+  &__ili {
+    display: block;
+    color: #fff;
+    font-size: 15px;
+    padding: 50px 0 0 0;
+    margin: 0 0 0 -26px;
+  }
+
   &__button-centr {
     color: #fff;
     padding: 24px 28px 16px 34px;
@@ -951,8 +963,8 @@ nav {
 .warranty {
   max-width: 100%;
   width: 100%;
-  background-color: rgb(187, 187, 187);
-  height: 500px;
+  background-color: rgb(202, 255, 172);
+  padding: 0 0 94px 0;
   position: relative;
 
   &__heading {
@@ -966,7 +978,7 @@ nav {
 
   &__support {
     color: #000;
-    margin: 17px 0 0 -22px;
+    margin: 17px 0 0 0;
     font-size: 16px;
     border-radius: 50px;
     background: #fff;
@@ -974,17 +986,171 @@ nav {
     text-decoration: none;
     text-align: center;
     display: inline-block;
+    padding: 17px 0 0 0;
   }
 
   &__sharlosk-man {
     position: absolute;
-top: 102px;
-left: 45px;
-
+    top: 102px;
+    left: 45px;
   }
 
+  &__information {
+    font-size: 19px;
+    font-weight: 600;
+    letter-spacing: -1.8px;
+  }
+}
 
+.partners {
+  background-color: rgb(85, 85, 85);
+  position: relative;
+  padding: 0 0 49px 0;
 
+  &__our {
+    color: #fff;
+    font-size: 42px;
+    text-align: center;
+    padding: 6px 8px 0 0;
+    display: block;
+    letter-spacing: -5.1px;
+  }
 
+  &__bottom {
+    padding: 50px 0 0 0;
+  }
+}
 
+.payment {
+  padding: 0 0 27px 0;
+
+  &__accept {
+    font-size: 40px;
+    padding: 10px 0 0;
+    text-align: center;
+    display: block;
+    letter-spacing: -3.7px;
+  }
+  &__wallets {
+    padding: 10px 0 0 0;
+  }
+
+  &__show-all {
+    display: block;
+    text-align: center;
+    font-size: 20px;
+    padding: 40px 0 0 0;
+    text-decoration: underline;
+  }
+}
+
+.recommendation {
+  padding: 0 0 70px 0;
+
+  &__heading {
+    text-align: center;
+    display: block;
+    font-size: 40px;
+    padding: 24px 0 0 0;
+    letter-spacing: -3px;
+    margin: 0;
+  }
+
+  &__images {
+    border-radius: 50%;
+    padding: 17px 0 0 26px;
+  }
+
+  &__photo {
+    padding: 20px 0 0 0;
+  }
+
+  &__h5 {
+    text-align: center;
+    font-size: 17px;
+    margin: 0;
+    padding: 53px 10px 0 0;
+    letter-spacing: -2.2px;
+  }
+
+  &__h6 {
+    text-align: center;
+    font-size: 13px;
+    font-style: italic;
+    font-weight: normal;
+    letter-spacing: -0.5px;
+    margin: 0;
+    padding: 15px 7px 0 0;
+  }
+
+  &__p {
+    font-size: 13px;
+    line-height: 23.5px;
+    text-align: justify;
+  }
+}
+
+.building {
+  background-color: #000;
+  width: 100%;
+  max-width: 100%;
+
+  &__computer {
+    margin: -13px 0 0 -68px;
+  }
+
+  &__tool {
+    margin: 0 0 55px -14px;
+  }
+
+  &__name {
+    font-size: 30px;
+    letter-spacing: -2.3px;
+    margin: 0 0 0 -53px;
+    padding: 58px 0 0 0;
+    color: #fff;
+  }
+
+  &__price {
+    margin: -24px 0 0 0;
+  }
+
+  &__ot {
+    font-size: 20px;
+    color: #fff;
+  }
+
+  &__r {
+    font-size: 33px;
+    color: #fff;
+  }
+
+  &__99 {
+    font-size: 65px;
+    color: #fff;
+    font-weight: 600;
+    letter-spacing: -5px;
+  }
+
+  &__mes {
+    font-size: 25px;
+    color: #fff;
+    margin: 0 0 0 -20px;
+  }
+
+  &__link-button {
+    background-color: #ffe300;
+    border-radius: 30px;
+    padding: 13px 35px 21px 43px;
+    color: #000;
+    text-decoration: none;
+    font-size: 18px;
+    text-align: center;
+    display: inline-block;
+    letter-spacing: -0.1px;
+  }
+
+  .grid-container.fluid {
+    max-width: 100%;
+  }
 }
