--- a/app/src/scss/common.scss
+++ b/app/src/scss/common.scss
@@ -427,6 +427,8 @@ nav {
     padding: 52px 0 0 21px;
     text-align: center;
     margin: 0;
+
+    font-family: "serif 700";
   }
 
   &__sherlock_one {
